--- a/flight-client/src/app/core/home/home.component.html
+++ b/flight-client/src/app/core/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="layout">
   <section class="section1 text-center">
-    <div class="mb-4" *ngIf="this.userService.isUserLoggedIn()">
-      <h3>Welcome {{user.username}}</h3>
+    <div class="mb-4" *ngIf="user">
+      <h3>Welcome {{user.username | titlecase}}</h3>
     </div>
     <div>
       <h1>It's Time to Book A Flight</h1>
