--- a/flight-client/src/app/features/search-flight/search-flight.component.html
+++ b/flight-client/src/app/features/search-flight/search-flight.component.html
@@ -1,7 +1,7 @@
 
 <div class="container boxLayout">
   <app-cards class="my-2 bg-light">
-    <form [formGroup]="searchFlight" (ngSubmit)="onSubmit()">
+    <form [formGroup]="searchFlightForm" (ngSubmit)="onSubmit()">
       <div class="d-flex flex-row align-items-center flex-wrap justify-content-around">
 
         <div *ngIf="locations">
@@ -41,7 +41,7 @@
                         placeholder="returning date"
                         [appendTo]="'body'"
                         [showIcon]="true"
-                        formControlName="arvlDate">
+                        formControlName="returnDate">
             </p-calendar>
           </label>
         </div>
@@ -52,7 +52,7 @@
 
         <button pButton type="button" label="Search"
                 class="ml-2 p-button-rounded p-button-success"
-                (click)="onSubmit()" [disabled]="searchFlight.invalid" >
+                (click)="onSubmit()" [disabled]="searchFlightForm.invalid" >
         </button>
 
       </div>
@@ -94,3 +94,5 @@
   </ng-template>
 
 </div>
+
+<app-user-errors></app-user-errors>
