--- a/flight-client/src/styles.sass
+++ b/flight-client/src/styles.sass
@@ -54,9 +54,9 @@
   margin-left: 40%
 
 .noDataSection
-  margin-top: 15%
+  margin: 30%
   max-width: 100%
-  height: 75%
+  height: 65%
 
 body .ui-card
   background-color: transparent !important
