--- a/flight-client/src/app/features/manage-airlines/manage-airlines.component.html
+++ b/flight-client/src/app/features/manage-airlines/manage-airlines.component.html
@@ -1,92 +1,5 @@
 
-<div class="container boxLayout">
-  <app-cards class="my-2 bg-light">
-    <form [formGroup]="addFlightForm" (ngSubmit)="onSubmit()">
-      <div class="d-flex flex-row align-items-center flex-wrap justify-content-around">
-        <div>
-          <label><b>AirLine Id</b>
-            <input class="font-weight-bold ml-4"
-                   formControlName="airlineId" type="text"
-                   pattern="^[A-Za-z0-9]+$">
-          </label>
-        </div>
-
-        <div *ngIf="airlinesList">
-          <label><b>Airline Name</b>
-            <p-dropdown  class="ml-2" [options]="airlinesList"
-                         [appendTo]="'body'"
-                         formControlName="airlineName"
-                         placeholder="Airlines">
-            </p-dropdown>
-          </label>
-        </div>
-
-        <div *ngIf="locations">
-          <label><b>From Location</b>
-            <p-dropdown  class="ml-2" [options]="locations"
-                         [appendTo]="'body'"
-                         formControlName="fromLocation"
-                         placeholder="from Location">
-            </p-dropdown>
-          </label>
-        </div>
-
-        <div *ngIf="locations">
-          <label><b>To Location</b>
-            <p-dropdown  class="ml-2" [options]="locations"
-                         [appendTo]="'body'"
-                         formControlName="toLocation"
-                         placeholder="to Location">
-            </p-dropdown>
-          </label>
-        </div>
-
-        <div>
-          <label><b>Departing Date</b>
-            <p-calendar class= "ml-3"
-                        placeholder="departing date"
-                        [appendTo]="'body'"
-                        [showIcon]="true"
-                        formControlName="deptDate">
-            </p-calendar>
-          </label>
-        </div>
-
-        <div>
-          <label><b>Returning Date</b>
-            <p-calendar class= "ml-3"
-                        placeholder="returning date"
-                        [appendTo]="'body'"
-                        [showIcon]="true"
-                        formControlName="returnDate">
-            </p-calendar>
-          </label>
-        </div>
-
-        <div>
-          <label><b>Seats</b>
-            <input class="font-weight-bold ml-4"
-                   formControlName="seats" type="number" [min]="1" [max]="100">
-          </label>
-        </div>
-
-      </div>
-
-      <div class="d-flex justify-content-center my-3">
-
-        <button pButton type="button" label="Add Airlines"
-                class="ml-2 p-button-rounded p-button-success"
-                (click)="onSubmit()" [disabled]="addFlightForm.invalid" >
-        </button>
-
-      </div>
-    </form>
-  </app-cards>
-</div>
-
-
-<div class="container" *ngIf="ifSearched">
-  <div class="my-3" *ngIf="flightList && flightList.length > 0; else showThis">
+<div class="container mt-5" *ngIf="flightList && flightList.length > 0; else showThis">
     <p-table  [columns]="cols"
               [value]="flightList"
               [paginator]="true"
@@ -108,14 +21,13 @@
         </tr>
       </ng-template>
     </p-table>
-  </div>
+</div>
+
 
   <ng-template #showThis>
-    <div class="container noDataSection">
-      <div class="d-flex align-items-center">
-        <h3>No Flights are Operated Currently</h3>
+    <div class="container boxLayout">
+      <div class="text-center">
+        <h4>No Flights are Operated Currently</h4>
       </div>
     </div>
   </ng-template>
-
-</div>
